samples/_failures_safe/1761310133_a6d55b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8875d6fc.c: In function ‘execute_operation’:
./samples/SAFE/__tmp_8875d6fc.c:144:25: error: missing terminating " character
  144 |         fprintf(stderr, "Invalid graph or operation
      |                         ^~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_8875d6fc.c:144:9: error: expected expression at end of input
  144 |         fprintf(stderr, "Invalid graph or operation
      |         ^~~~~~~
./samples/SAFE/__tmp_8875d6fc.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_8875d6fc.c:144:9: error: expected declaration or statement at end of input
